Added introduction slides

--- a/version-control/slides/slides_version-control.html
+++ b/version-control/slides/slides_version-control.html
@@ -3,8 +3,7 @@
   <head>
     <title>Version control with Git</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Barbara Vreede" />
-    <meta name="date" content="2019-11-20" />
+    <meta name="author" content="Best Practices for Writing Reproducible Code // part 2" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/metropolis.css" rel="stylesheet" />
     <link href="libs/remark-css/metropolis-fonts.css" rel="stylesheet" />
@@ -15,20 +14,62 @@
 class: center, middle, inverse, title-slide
 
 # Version control with Git
-### Barbara Vreede
-### Utrecht University
-### 20 November 2019
+### Best Practices for Writing Reproducible Code // part 2
 
 ---
 
 
-background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/be/Sharingan_triple.svg)
 
 
+# Why do you need version control?
 
-???
+.pull-left[
 
-Image credit: [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Sharingan_triple.svg)
+- It will help you manage ~~your code~~ most of your files.
+
+- It is like track changes on steroids: it applies to all files in a folder.
+
+- It allows you to trace back your steps: if something breaks, you can figure out what happened.
+
+- NO MORE thesis_final_final_SERIOUSLYFINAL.Rmd
+
+even better:
+- a good version control system allows you to collaborate and share!
+
+]
+
+.pull-right[
+![final](http://www.phdcomics.com/comics/archive/phd101212s.gif)
+]
+---
+background-image: url(slides_version-control_files/figure-html/git.svg)
+background-size: 500px
+background-position: 96% 15%
+
+# What is git?
+.large-left-column[
+- Version Control system written by Linus Torvalds (of Linux fame)
+
+- Allows you to log updates, branch your work (so you can experiment without losing the original!), and keep all backups, while efficiently using your storage
+
+- Open Source software written for the command line...
+
+- ... but many GUI-clients exist nowadays, and most coding IDEs have built-in git.]
+
+---
+# Slide title
+
+Here is text.
+
+---
+# Slide title
+
+Here is text.
+
+---
+# Slide title
+
+Here is text.
 
 ---
 class: center, middle
