templates python and R

--- a/code-documentation/slides/code_documentation.html
+++ b/code-documentation/slides/code_documentation.html
@@ -28,10 +28,10 @@
 class: center, middle, inverse, title-slide
 
 # Code documentation
-## ⚔<br/>Reproducible code workshop
+## ⚔<br/>Reproducible code workshop.
 ### Armel Lefebvre, Barbara Vreede
 ### Utrecht University
-### 2016/11/20 (updated: 2019-11-11)
+### 20/11/2019 (updated: 2019-11-14)
 
 ---
 
@@ -42,43 +42,63 @@ class: center, middle, inverse, title-slide
 
 You can document:
 
-- How to use your code
-  - Rmd documents
+- How to use your code with dynamic documents
+  - RMarkdowns documents
   - Jupyter notebooks
   
-- What your code does
+- What your code does with inline comments, in the source code
   - Comment lines
   - Structured documentation strings
+  
+- What to install
+  - Readme.md shown on the main page of git repositories
+  - Requirements.txt in python
+  - Packrat in R, sessionInfo writelines, checkpoints
 
 ---
 
 ## Dynamic documents
 
-DYNDOC
+Dynamic documents combine text (=human reader) with code chunks (=machine)
+
 
 
 ```python
-print("Yoooo")
+# Running python in an RMarkdown document 
+# requires the package reticulate
+who_am_i = "Python"
+
+print(f"I said I am {who_am_i}")
 ```
 
 ```
-## Yoooo
+## I said I am Python
 ```
-
 
 ---
 
 ## Documentation syntax
 
-- Bullet 1
-- Bullet 2
-- Bullet 3
+Structured text comment
 
 ---
 ## Documentation generator
+- 
 
 ---
-## Hostring documentation
+## What to  in your code
+
+
+---
+## Hosting documentation
+
+
+---
+## Readme
+
+
+---
+## Hosting documentation
 
 
 &lt;!-- End Section Armel --&gt;
@@ -361,8 +381,8 @@ library(leaflet)
 leaflet() %&gt;% addTiles() %&gt;% setView(-93.65, 42.0285, zoom = 17)
 ```
 
-<div id="htmlwidget-4d4616f97cce6ed307ce" style="width:100%;height:432px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-4d4616f97cce6ed307ce">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]}],"setView":[[42.0285,-93.65],17,[]]},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-5d8642c32fa849f234a8" style="width:100%;height:432px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-5d8642c32fa849f234a8">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]}],"setView":[[42.0285,-93.65],17,[]]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -374,8 +394,8 @@ DT::datatable(
 )
 ```
 
-<div id="htmlwidget-7061f4fdb79722ab55e0" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-7061f4fdb79722ab55e0">{"x":{"filter":"none","fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10"],[5.1,4.9,4.7,4.6,5,5.4,4.6,5,4.4,4.9],[3.5,3,3.2,3.1,3.6,3.9,3.4,3.4,2.9,3.1],[1.4,1.4,1.3,1.5,1.4,1.7,1.4,1.5,1.4,1.5],[0.2,0.2,0.2,0.2,0.2,0.4,0.3,0.2,0.2,0.1],["setosa","setosa","setosa","setosa","setosa","setosa","setosa","setosa","setosa","setosa"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Sepal.Length<\/th>\n      <th>Sepal.Width<\/th>\n      <th>Petal.Length<\/th>\n      <th>Petal.Width<\/th>\n      <th>Species<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":8,"columnDefs":[{"className":"dt-right","targets":[1,2,3,4]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[8,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-da42e79be1cd930982c7" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-da42e79be1cd930982c7">{"x":{"filter":"none","fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10"],[5.1,4.9,4.7,4.6,5,5.4,4.6,5,4.4,4.9],[3.5,3,3.2,3.1,3.6,3.9,3.4,3.4,2.9,3.1],[1.4,1.4,1.3,1.5,1.4,1.7,1.4,1.5,1.4,1.5],[0.2,0.2,0.2,0.2,0.2,0.4,0.3,0.2,0.2,0.1],["setosa","setosa","setosa","setosa","setosa","setosa","setosa","setosa","setosa","setosa"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Sepal.Length<\/th>\n      <th>Sepal.Width<\/th>\n      <th>Petal.Length<\/th>\n      <th>Petal.Width<\/th>\n      <th>Species<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":8,"columnDefs":[{"className":"dt-right","targets":[1,2,3,4]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[8,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
 
 ---
 
