--- a/version-control/slides/slides_version-control.html
+++ b/version-control/slides/slides_version-control.html
@@ -42,12 +42,8 @@ even better:
 ![final](http://www.phdcomics.com/comics/archive/phd101212s.gif)
 ]
 ---
-background-image: url(slides_version-control_files/figure-html/git.svg)
-background-size: 500px
-background-position: 96% 15%
-
+.pull-left-larger[
 # What is git?
-.large-left-column[
 - Distributed Version Control system written by Linus Torvalds (of Linux fame)
 
 - Allows you to log updates, branch your work (so you can experiment without losing the original!), and keep all backups, while efficiently using your storage
@@ -59,22 +55,31 @@ background-position: 96% 15%
 - Open Source software written for the command line...
 
 - ... but many GUI-clients exist nowadays, and most coding IDEs have built-in git.]
+.pull-right-smaller[
+#![git-logo](slides_version-control_files/figure-html/git-logo-small.svg)
+![distributed](slides_version-control_files/figure-html/screenshots/distributed.png)
+
+![git](https://imgs.xkcd.com/comics/git.png)
+]
 
 ---
 # Starting with git
 
 1. (You should have installed git by now! If you have not: [git-scm.com](https://git-scm.com).)
-1. Navigate to your project folder in a terminal.
 
-1. Initiate the repository:
+1. Navigate to your project folder in a terminal.
+```
+cd [path/to/project_folder]
+```
+1. Initiate a git repository in this location:
 ```
 git init
 ```
-1. Add your files to the staging area:
+1. Add all your files to the staging area:
 ```
 git add *
 ```
-1. Commit all the files in your repository:
+1. Commit all the files in the staging area to your repository:
 ```
 git commit -m "First commit"
 ```
@@ -118,21 +123,25 @@ git config --global user.email "your@email.com"
 ---
 # Your workflow
 
-1. Add the changed file(s) to the staging area
+1. Add the changed file(s) to the staging area, and commit the changes:
 ```
-git add filename.py
-```
-1. Commit the changes, don't forget your commit message (try what happens if you do!).
-```
+git add src/filename.py anotherfile.txt
+git add config/configfile.json
 git commit -m "My commit message"
 ```
-1. Push to the online repository:
+OR
+
+2. commit files directly, without staging:
 ```
-git push
+git commit src/filename.py anotherfile.txt -m "My commit message"
 ```
 
+NB: don't forget your commit message (try what happens if you do!).
 ![repo](slides_version-control_files/figure-html/swcarpentry/git-staging-area.svg)
-
+.footnote[
+Image credit:&lt;br /&gt;
+Software Carpentries
+]
 ---
 # What else can I do with git?
 
@@ -150,13 +159,79 @@ What differences are there between your last commit and your workspace? (Or betw
 git diff
 git diff HEAD~3
 ```
-How did the README file look 5 commits ago?
+SO much more!
 ```
-git show HEAD~5 README.md
+git --help
 ```
 
 ---
+# .gitignore
+
+The .gitignore file in your template contains files that **by definition** will not be tracked by git.
+
+For example, if you do not want to track a file .DS_Store (always present on my mac), you enter a line like this in your .gitignore file:
+```
+.DS_Store
+```
+Similarly, you can ensure all output in a folder will not be tracked:
+```
+results/
+```
+Or all files with a certain extension:
+```
+ *.dat
+```
+
+NB: There is a .gitkeep file in your template -- this does not do the opposite to .gitignore, but is instead used as a placeholder for folders. Git does not track empty folders...
+
+---
 # Your turn!
+
+1. Continue moving your files into the file template.
+
+1. Add, commit, and push all files you want to track.
+  - Are there files you do not wish to track? Add them to the .gitignore file.
+  - Do you want to move a tracked file within a git repository?
+```
+git mv path/to/file.svg newpath/
+```
+(don't forget to commit!)
+1. Continue editing your code, and add/commit/push your changes. Can you do it from your IDE?
+
+1. Experiment with editing and committing on github itself. You can then 'download' your code to your local repository using
+```
+git pull
+```
+1. What happens if you edit the same file online and locally, and try to push/pull?
+
+---
+# Enjoy, and git responsibly!
+
+- Commits should be atomic: comprehensive 'units' of changes.
+  - **DO**: edit/add an .svg and add it to your .Rmd presentation in the same commit
+  - **DON'T**: edit for a full day and put this in a single commit (or worse: forget to...)
+
+- Commits should have informative messages so you (and others) can trace your steps
+
+  ![git_commit](https://imgs.xkcd.com/comics/git_commit.png)
+
+- Track most files; .gitignore those files you don't.
+
+- Explore new ideas with branches, keep a stable version on `master`
+
+
+---
+# Do you want to learn more?
+
+- A [Software Carpentry course on git](https://swcarpentry.github.io/git-novice/)
+
+- A [version control + git tutorial](https://www.atlassian.com/git/tutorials/what-is-version-control) on Atlassian
+
+- A [git cheatsheet](https://www.atlassian.com/git/tutorials/atlassian-git-cheatsheet) from Atlassian
+
+- A book with [all the ins and outs of git](https://www.git-scm.com/book/en/v2) from the git website
+
+![atlassian](slides_version-control_files/figure-html/atlassian/bubblediag.svg)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
