added link to tidytuesday

--- a/slides/slides_introduction.html
+++ b/slides/slides_introduction.html
@@ -106,6 +106,16 @@ We will end by trying to reproduce each others' projects!
 
 --
 
+#### Do you have your own data/code?
+
+If not: find an interesting dataset [on this github repo](https://github.com/rfordatascience/tidytuesday). How about:
+- [space launches](https://github.com/rfordatascience/tidytuesday/tree/master/data/2019/2019-01-15)
+- [nobel prize winners](https://github.com/rfordatascience/tidytuesday/tree/master/data/2019/2019-05-14)
+- [cetaceans data](https://github.com/rfordatascience/tidytuesday/tree/master/data/2018/2018-12-18)
+
+
+--
+
 ### Our objectives for you
 We want to teach you **good habits** that will make your work more accessible, trustworthy, and reproducible by others. In doing so, we have tried to identify those habits that are a **good return on investment**: meaning, they save you time in the not-so-long run.
 
