moved objectives to new slide to fit

--- a/slides/slides_introduction.html
+++ b/slides/slides_introduction.html
@@ -114,10 +114,6 @@ If not: find an interesting dataset [on this github repo](https://github.com/rfo
 - [cetaceans data](https://github.com/rfordatascience/tidytuesday/tree/master/data/2018/2018-12-18)
 
 
---
-
-### Our objectives for you
-We want to teach you **good habits** that will make your work more accessible, trustworthy, and reproducible by others. In doing so, we have tried to identify those habits that are a **good return on investment**: meaning, they save you time in the not-so-long run.
 
 ---
 # What do we expect from you?
@@ -126,15 +122,18 @@ We want to teach you **good habits** that will make your work more accessible, t
 
 - Feel free and safe to share your expertise and experiences, either by helping your neighbor or by showing everyone.
 
+--
 
-#### As for feedback...
-This workshop is work in progress! This is a pilot and we *emphatically* want your feedback. That can be anything you can think of, but in particular:
+#### Our objectives for you
+We want to teach you **good habits** that will make your work more accessible, trustworthy, and reproducible by others. In doing so, we have tried to identify those habits that are a **good return on investment**: meaning, they save you time in the not-so-long run.
+
+#### Give us feedback!
 
   - Does this tool/lesson align with the objectives of the course?
   
   - Do/did you have (access to) crucial basic information to understand our lessons?
 
-  - If you do not know a certain word or term (or you think others may not know it): flag it! We will be adding these terms to a glossary.
+  - If you do not know a certain word or term (or you think others may not know it): flag it! We will add these terms to the glossary.
 
 ---
 # Let's get practical!
