--- a/slides/slides_code-documentation.html
+++ b/slides/slides_code-documentation.html
@@ -22,16 +22,21 @@ class: center, middle, inverse, title-slide
 
 # Code quality defined
 
+.pull-left[
 - Readable
 
 - Robust
 
 - Reusable
+]
 
-
-![codequality](https://imgs.xkcd.com/comics/code_quality.png)
 .footnote[
 Source: [xkcd](https://xkcd.com/1513/)
+]
+
+.pull-right[
+![goodcode](https://imgs.xkcd.com/comics/good_code.png)
+
 ]
 
 ---
@@ -144,9 +149,17 @@ my_var &lt;- original_var + Modified(new_var)
   - consistency will make your code easier to understand and maintain
   - consult a styleguide for your language (keep conventions, and don't reinvent the wheel)
   
-### Styleguides:
+---
+# Styleguides
+
   - Python style manual: [Pep-8](https://www.python.org/dev/peps/pep-0008/)
   - R style manual: [Tidyverse style guide](https://style.tidyverse.org)
+  
+![codequality](https://imgs.xkcd.com/comics/code_quality.png)
+.footnote[
+Source: [xkcd](https://xkcd.com/1513/)
+]
+
 
 ---
 # Code robustness (part 1)
