--- a/slides/slides_project-setup.html
+++ b/slides/slides_project-setup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html lang="" xml:lang="">
   <head>
     <title>Setting up a project</title>
     <meta charset="utf-8" />
@@ -150,7 +150,7 @@ Then don't include your data in your software repository (that's not what they a
 
 _Sure, but my code references my data!_
 
-Yeah that's not good. Don't do that.
+This is something you can fix! Use a config or metadata file, and move all references to your data here. Generate a mock metadata/config file so that your code can run regardless.
 
 --
 
@@ -182,6 +182,220 @@ If you are super paranoid, you can always opt for a private repository.
 ![octocat-project](https://github.githubassets.com/images/modules/logos_page/Octocat.png)
 ![zenodo](https://blog.zenodo.org/static/img/logos/zenodo-gradient-1000.png)
 ]
+---
+
+# Why do you need version control?
+
+.pull-left[
+
+- It will help you manage ~~your code~~ most of your files (it is like track changes on steroids: it applies to all files in a folder).
+
+- It allows you to trace back your steps: if something breaks, you can figure out what happened.
+
+- NO MORE thesis_final_final_SERIOUSLYFINAL.Rmd
+
+even better:
+- a good version control system allows you to collaborate and share!
+
+- a good version control system facilitates experimentation!
+
+]
+
+.pull-right[
+![final](http://www.phdcomics.com/comics/archive/phd101212s.gif)
+]
+---
+.pull-left-larger[
+# What is git?
+- Distributed Version Control system written by Linus Torvalds (of Linux fame)
+
+- Allows you to log updates, branch your work (so you can experiment without losing the original!), and keep all backups, while efficiently using your storage
+
+- Gives user a lot of control on what to track, and adds a narrative to changes ('commit comments')
+
+- Current standard for code
+
+- Open Source software written for the command line...
+
+- ... but many GUI-clients exist nowadays, and most coding IDEs have built-in git.]
+.pull-right-smaller[
+#![git-logo](images/git-logo-small.svg)
+![distributed](images/screenshots/distributed.png)
+
+![git](https://imgs.xkcd.com/comics/git.png)
+]
+
+---
+# Your turn: starting with git
+
+1. (You should have installed git by now! If you have not: [git-scm.com](https://git-scm.com).)
+
+1. Navigate to your project folder in a terminal.
+```bash
+cd [path/to/project_folder]
+```
+1. Initiate a git repository in this location:
+```bash
+git init
+```
+1. Add all your files to the staging area:
+```bash
+git add *
+```
+1. Commit all the files in the staging area to your repository:
+```bash
+git commit -m "First commit"
+```
+
+---
+# Your turn: connecting to github
+
+1. Go to your github account and add a new repository (click '+', then 'New repository'):
+
+   ![new-repo](images/screenshots/github_add_repo.png)
+
+1. Fill out the information for your new repository. DO NOT initialize the repository yet!
+
+  ![initialize](images/screenshots/initialize.png)
+  
+1. Set the origin of your local repository to the URL of your repo on github:
+```bash
+git remote add origin git@github.com:[youraccount]/[yourrepo].git
+```
+
+
+---
+# Your turn: pushing to github
+
+You can now push the content of your local repository to the one on github:
+
+```bash
+git push -u origin master
+```
+
+Congrats, your local repository now has an online representation!
+
+![octocat](https://github.githubassets.com/images/modules/logos_page/Octocat.png) \\\_\_\_ _THANK YOU!_
+
+Take a look at your online repository. Who is the author of your commits? If it is not you, you can configure git to use your identity (make sure github knows this email address):
+```bash
+git config --global user.name "Your Name"
+git config --global user.email "your@email.com"
+```
+
+---
+# Your workflow
+
+1. Add the changed file(s) to the staging area, and commit the changes:
+```bash
+git add src/filename.py anotherfile.txt
+git add config/configfile.json
+git commit -m "My commit message"
+```
+OR
+
+2. commit files directly, without staging:
+```bash
+git commit src/filename.py anotherfile.txt -m "My commit message"
+```
+
+NB: don't forget your commit message (try what happens if you do!).
+![repo](images/swcarpentry/git-staging-area.svg)
+.footnote[
+Image credit:&lt;br /&gt;
+Software Carpentries
+]
+---
+# What else can I do with git?
+
+Check the status of your repository:
+```bash
+git status
+```
+Check the log of your previous commits:
+```bash
+git log
+git log --oneline
+```
+What differences are there between your last commit and your workspace? (Or between two previous commits...)
+```bash
+git diff
+git diff HEAD~3
+```
+SO much more!
+```bash
+git --help
+```
+
+---
+# .gitignore
+
+The .gitignore file in your template contains files that **by definition** will not be tracked by git.
+
+For example, if you do not want to track a file .DS_Store (always present on my mac), you enter a line like this in your .gitignore file:
+```bash
+.DS_Store
+```
+Similarly, you can ensure all output in a folder will not be tracked:
+```bash
+results/
+```
+
+Or all files with a certain extension:
+```bash
+ *.dat 
+```
+
+NB: There is a .gitkeep file in your template -- this does not do the opposite to .gitignore, but is instead used as a placeholder for folders. Git does not track empty folders...
+
+---
+# Your turn!
+
+1. Continue moving your files into the file template.
+
+1. Add, commit, and push all files you want to track.
+  - Are there files you do not wish to track? Add them to the .gitignore file.
+  - Do you want to move a tracked file within a git repository?
+```bash
+git mv path/to/file.svg newpath/
+```
+(don't forget to commit!)
+1. Continue editing your code, and add/commit/push your changes. Can you do it from your IDE?
+
+1. Experiment with editing and committing on github itself. You can then 'download' your code to your local repository using
+```bash
+git pull
+```
+1. What happens if you edit the same file online and locally, and try to push/pull?
+
+---
+# Enjoy, and git responsibly!
+
+- Commits should be atomic: comprehensive 'units' of changes.
+  - **DO**: edit/add an .svg and add it to your .Rmd presentation in the same commit
+  - **DON'T**: edit for a full day and put this in a single commit (or worse: forget to...)
+
+- Commits should have informative messages so you (and others) can trace your steps
+
+  ![git_commit](https://imgs.xkcd.com/comics/git_commit.png)
+
+- Track most files; .gitignore those files you don't.
+
+- Explore new ideas with branches, keep a stable version on `master`
+
+
+---
+# Do you want to learn more?
+
+- A [Software Carpentry course on git](https://swcarpentry.github.io/git-novice/)
+
+- A [version control + git tutorial](https://www.atlassian.com/git/tutorials/what-is-version-control) on Atlassian
+
+- A [git cheatsheet](https://www.atlassian.com/git/tutorials/atlassian-git-cheatsheet) from Atlassian
+
+- A book with [all the ins and outs of git](https://www.git-scm.com/book/en/v2) from the git website
+
+![atlassian](images/atlassian/bubblediag.svg)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
