added replication to the slides

--- a/slides/slides_introduction.html
+++ b/slides/slides_introduction.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html lang="" xml:lang="">
   <head>
     <title>Welcome!</title>
     <meta charset="utf-8" />
@@ -23,11 +23,11 @@ class: center, middle, inverse, title-slide
 # Be Reproducible!
 .pull-left-medium[
 What is reproducibility?
-- a challenge for scientists!
 
 - **computationally reproducible** means: with same code + same data + same environment
 == same results
 
+- Not the same as **replication**, where _different_ methods and _different_ data lead to the same research findings
 
 Why do you want to make your work reproducible?
 
@@ -94,7 +94,7 @@ We will take you through a workflow (in a broader sense!)
 
 - Establishing a robust backup / version control system
 
-- Writing robust code
+- Writing good code
 
 - Writing documentation
 
@@ -126,14 +126,14 @@ If not: find an interesting dataset [on this github repo](https://github.com/rfo
 
 #### Our objectives for you
 We want to teach you **good habits** that will make your work more accessible, trustworthy, and reproducible by others. In doing so, we have tried to identify those habits that are a **good return on investment**: meaning, they save you time in the not-so-long run.
-
+--
 #### Give us feedback!
 
   - Does this tool/lesson align with the objectives of the course?
   
   - Do/did you have (access to) crucial basic information to understand our lessons?
 
-  - If you do not know a certain word or term (or you think others may not know it): flag it! We will add these terms to the glossary.
+  - If you do not know a certain word or term (or you think others may not know it): put it in the glossary, at [tinyurl.com/repco-glossary](https://docs.google.com/document/d/1UHBFyfvHoHXiV1Slr_DvxYDQyakozuPw_xPTJgeNInI/edit)
 
 ---
 # Let's get practical!
