--- a/slides/slides_code-quality.html
+++ b/slides/slides_code-quality.html
@@ -186,9 +186,19 @@ except Exception as ex:
 ```
 ---
 
-# Code reusability through functions
+# Think in building blocks!
 
-#### Modular code is reusable code!
+.pull-left[
+Small, cohesive units are much better than...
+
+![tetris](images/tetris.svg)]
+--
+.pull-right[
+... a customized behemoth!
+![tetris](images/tetris_help.svg)]
+
+
+---
 
 ```r
 
@@ -462,7 +472,7 @@ unittest.main(argv=['trick to make it work in a notebook'], exit=False)
 ```
 
 ```
-## &lt;unittest.main.TestProgram object at 0x1229261d0&gt;
+## &lt;unittest.main.TestProgram object at 0x12291e2e8&gt;
 ## 
 ## ..
 ## ----------------------------------------------------------------------
@@ -492,7 +502,7 @@ class TestStringMethods(unittest.TestCase):
 
 
 ```
-## &lt;unittest.main.TestProgram object at 0x12294ee10&gt;
+## &lt;unittest.main.TestProgram object at 0x115014128&gt;
 ## 
 ## ..F
 ## ======================================================================
